# ztail

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ztail.cpp  ztail_lz4.cpp  ztail_zstd.cpp
.github/workflows/: build.yml
src/: char_ring_buffer.cpp  char_ring_buffer.h  circular_buffer.cpp  circular_buffer.h  cli.cpp  cli.h  compression_type.cpp  compression_type.h  compressor_bzip2.cpp  compressor_bzip2.h  compressor_xz.cpp  compressor_xz.h  compressor_zip.cpp  compressor_zip.h  compressor_zlib.cpp  compressor_zlib.h  compressor_zstd.cpp  compressor_zstd.h  file_ptr.h  icompressor.h  main.cpp  parser.cpp  parser.h  tail_plain.cpp  tail_plain.h
tests/: test_buffer_bench.cpp  test_char_ring_buffer.cpp  test_circular_buffer.cpp  test_compressor_bzip2.cpp  test_compressor_xz.cpp  test_compressor_zip.cpp  test_compressor_zlib.cpp  test_compressor_zstd.cpp  test_detection.cpp  test_parser.cpp
